fix explain-layer vpos on smaller screens

--- a/src/styles/map.module.css
+++ b/src/styles/map.module.css
@@ -24,9 +24,16 @@
     margin-bottom: 0.7rem;
 }
 
+/* Tablet and Smaller Desktop */
+@media (min-width: 701px) and (max-width: 1120px) {
+    .mapsheading {
+        margin-top: 80px;
+    }
+}
+
 /* Mobile */
 @media (max-width: 700px) {
     .mapsheading {
-        margin-top: 70px;
+        margin-top: 80px;
     }
 }
